--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "雞肉飯要每天吃",
-  "short_name": "雞肉飯",
+  "name": "雞肉飯天天吃",
+  "short_name": "雞肉飯好吃",
   "description": "貸款計算機",
   "start_url": "./index.html",
   "display": "standalone",
